OXM test move to org.eclipse.persistence.core module
Signed-off-by: Radek Felcman <radek.felcman@oracle.com>